--- a/dashboard_app/templates/products/product_list.html
+++ b/dashboard_app/templates/products/product_list.html
@@ -11,6 +11,7 @@
 <body>
     <h1>รายการสินค้า</h1>
     <a href="{% url 'add_product' %}" class="btn">เพิ่มสินค้า</a>
+    <a href="{% url 'view_cart' %}">🛒 ตะกร้าสินค้า</a>
     <table border="1">
         <tr>
             <th>ชื่อสินค้า</th>
