--- a/store/templates/products/settings.html
+++ b/store/templates/products/settings.html
@@ -14,7 +14,7 @@
             <li class="list-group-item"><a href="{% url 'add_product' %}" class="btn btn-primary w-100">➕ เพิ่มสินค้า</a></li>
             <li class="list-group-item"><a href="{% url 'product_list' %}" class="btn btn-warning w-100">📦 จัดการสินค้า</a></li>
             <li class="list-group-item">
-                <form action="{% url 'login' %}" method="post" class="d-inline">
+                <form action="{% url 'logout' %}" method="post" class="d-inline">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger w-100">🚪 ออกจากระบบ</button>
                 </form>
