--- a/store/templates/login/home.html
+++ b/store/templates/login/home.html
@@ -9,7 +9,7 @@
     
     <!-- ✅ เรียกใช้ Bootstrap เพื่อช่วยจัด Layout -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/pos.css' %}"> <!-- ✅ ใช้ CSS แยกไฟล์ -->
+    <link rel="stylesheet" href="{% static 'styles/home1.css' %}"> <!-- ✅ ใช้ CSS แยกไฟล์ -->
 </head>
 <body>
 
