--- a/store/templates/products/settings.html
+++ b/store/templates/products/settings.html
@@ -11,6 +11,7 @@
     <div class="container mt-4">
         <h2>⚙️ ตั้งค่าระบบ</h2>
         <ul class="list-group">
+            <li class="list-group-item"><a href="{% url 'dashboard' %}" class="btn btn-info w-100">📊 ไปที่ Dashboard</a></li>
             <li class="list-group-item"><a href="{% url 'add_product' %}" class="btn btn-primary w-100">➕ เพิ่มสินค้า</a></li>
             <li class="list-group-item"><a href="{% url 'product_list' %}" class="btn btn-warning w-100">📦 จัดการสินค้า</a></li>
             <li class="list-group-item">
@@ -19,7 +20,6 @@
                     <button type="submit" class="btn btn-danger w-100">🚪 ออกจากระบบ</button>
                 </form>
             </li>
-            
         </ul>
     </div>
 </body>
