--- a/store/templates/cart/cart.html
+++ b/store/templates/cart/cart.html
@@ -58,7 +58,7 @@
 
             <div class="d-flex justify-content-between mt-4">
                 <a href="{% url 'home' %}" class="btn btn-secondary">⬅ ย้อนกลับ</a>
-                <a href="{% url 'checkout' %}" class="btn btn-success">✅ ยืนยันคำสั่งซื้อ</a>
+                <a href="{% url 'confirm_order' %}" class="btn btn-success">✅ ยืนยันคำสั่งซื้อ</a>
             </div>
 
         {% else %}
