--- a/store/templates/products/settings.html
+++ b/store/templates/products/settings.html
@@ -13,6 +13,7 @@
         <ul class="list-group">
             <li class="list-group-item"><a href="{% url 'dashboard' %}" class="btn btn-info w-100">📊 ไปที่ Dashboard</a></li>
             <li class="list-group-item"><a href="{% url 'add_product' %}" class="btn btn-primary w-100">➕ เพิ่มสินค้า</a></li>
+            <li class="list-group-item"><a href="{% url 'order_list' %}" class="btn btn-primary w-100">ประวัติการสั่งซื้อ</a></li>
             <li class="list-group-item"><a href="{% url 'product_list' %}" class="btn btn-warning w-100">📦 จัดการสินค้า</a></li>
             <li class="list-group-item">
                 <form action="{% url 'logout' %}" method="post" class="d-inline">
