--- a/store/templates/login/register.html
+++ b/store/templates/login/register.html
@@ -53,6 +53,7 @@
 
     <div class="footer">
         <p>มีบัญชีแล้ว? <a href="{% url 'login' %}">เข้าสู่ระบบ</a></p>
+        <p>ต้องการสมัครสมาชิก <a href="{% url 'admin_register' %}">แอดมิน</a></p>
     </div>
 </div>
 {% endblock %}
