--- a/store/templates/admin/register.html
+++ b/store/templates/admin/register.html
@@ -38,7 +38,7 @@
         </form>
 
         <div class="text-center mt-3">
-            <a href="{% url 'admin_login' %}" class="btn btn-secondary">🔑 เข้าสู่ระบบ</a>
+            <a href="{% url 'login' %}" class="btn btn-secondary">🔑 เข้าสู่ระบบ</a>
         </div>
     </div>
 
